kubernetes/deployment-fortune.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fortune
  namespace: default
spec:
  selector:
    matchLabels:
      app: fortune
  replicas: 2
  template:
    metadata:
      labels:
        app: fortune
    spec:
      containers:
      - name: fortune
        image: flask:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
