kubernetes/service-fortune.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-fortune
  namespace: default
  labels:
    app: service-fortune
spec:
  selector:
    app: fortune
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: http
