kubernetes/ingress-fortune.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fortune
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: ec2-3-79-208-152.eu-central-1.compute.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-fortune
            port:
              number: 80
